--- a/users/templates/change_password.html
+++ b/users/templates/change_password.html
@@ -97,7 +97,7 @@
   <div class="navbar">
     <h1>שינוי סיסמה - CampusFlow</h1>
     <div class="nav-links">
-      <a href="{% url 'admin_dashboard' %}">← חזרה לדשבורד</a>
+      <a href="{% url 'admin_dashboard' %}"> חזרה לדשבורד</a>
     </div>
   </div>
 
