--- a/users/templates/create_user.html
+++ b/users/templates/create_user.html
@@ -97,7 +97,7 @@
   <div class="navbar">
     <h1>יצירת משתמש - CampusFlow</h1>
     <div class="nav-links">
-      <a href="{% url 'admin_dashboard' %}">← חזרה לדשבורד</a>
+      <a href="{% url 'admin_dashboard' %}">חזרה לדשבורד</a>
     </div>
   </div>
 
