--- a/users/templates/update_profile.html
+++ b/users/templates/update_profile.html
@@ -103,7 +103,7 @@
   <div class="navbar">
     <h1>עדכון פרטי משתמש</h1>
     <div class="nav-links">
-      <a href="{% url 'student_dashboard' %}">← חזרה לדשבורד</a>
+      <a href="{% url 'student_dashboard' %}">חזרה לדשבורד</a>
     </div>
   </div>
 
